update al metodo di ricerca ricette, aggiustato swagger
